@@ -1,5 +1,6 @@
 2016-06-07  Eric Herman <eric@freesa.org>
 
+	malloc -> ehbi_stack_alloc for debug string buf
 	cleanup includes in tests, and tests LDADDs
 
 2016-05-22  Eric Herman <eric@freesa.org>
